--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,7 +2,7 @@
 
 github: CovenantArchitects
 patreon: # Replace with a single Patreon username
-open_collective: CovenantArchitects
+open_collective: sean-sheppard
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
@@ -13,5 +13,5 @@ polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 thanks_dev: # Replace with a single thanks.dev username
 custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
-- https://opencollective.com/covenant-architects/donate
+- https://opencollective.com/sean-sheppard
   - https://github.com/sponsors/CovenantArchitects
