--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,7 +2,7 @@
 
 github: CovenantArchitects
 patreon: # Replace with a single Patreon username
-open_collective: sean-sheppard
+open_collective: the-partnership-covenant
 ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
@@ -12,7 +12,7 @@ lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cl
 polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 thanks_dev: # Replace with a single thanks.dev username
-custom: https://opencollective.com/sean-sheppard
+custom: https://opencollective.com/the-partnership-covenant
 custom: https://github.com/sponsors/CovenantArchitects
 
 
