--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,7 +12,5 @@ lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cl
 polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 thanks_dev: # Replace with a single thanks.dev username
-custom: https://opencollective.com/the-partnership-covenant
-custom: https://github.com/sponsors/CovenantArchitects
-
+custom: ["https://opencollective.com/the-partnership-covenant", "https://github.com/sponsors/CovenantArchitects"]
 
