--- a/.github/workflows/governance-check.yml
+++ b/.github/workflows/governance-check.yml
@@ -2,7 +2,9 @@ name: Governance docs check
 
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   docs-check:
@@ -11,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Check required governance files exist
+        shell: bash
         run: |
           files=(
             "05_GOVERNANCE_AND_PROTOCOL_UPDATES/HCB_INCENTIVES_v5.md"
@@ -33,11 +36,14 @@ jobs:
 
           if [[ $missing -eq 1 ]]; then
             echo "Some governance files are missing. Failing."
-            exit 2
+            exit 1
           fi
 
       - name: Lint Markdown
         uses: reviewdog/action-markdownlint@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
+          reporter: github-pr-review
+          filter_mode: added
+          level: warning
+          input: "05_GOVERNANCE_AND_PROTOCOL_UPDATES/**/*.md"
