--- a/.github/workflows/governance-check-simple.yml
+++ b/.github/workflows/governance-check-simple.yml
@@ -50,14 +50,22 @@ jobs:
             echo "All governance files found!"
           fi
 
-      - name: Install markdownlint
+      - name: Install markdownlint & link checker
         run: |
-          npm install -g markdownlint-cli
+          npm install -g markdownlint-cli markdown-link-check
 
       - name: Lint Markdown files (friendly)
         run: |
           md_files=$(find 05_GOVERNANCE_AND_PROTOCOL_UPDATES/ -name "*.md" -o -name "DECISION-LOG.md")
           echo "Linting Markdown files:"
           echo "$md_files"
-          # Run markdownlint but never fail workflow
           markdownlint $md_files || echo "⚠️ Markdown lint found issues. See above."
+
+      - name: Check for broken Markdown links (friendly)
+        run: |
+          md_files=$(find 05_GOVERNANCE_AND_PROTOCOL_UPDATES/ -name "*.md" -o -name "DECISION-LOG.md")
+          echo "Checking links in Markdown files:"
+          for f in $md_files; do
+            echo "🔗 Checking $f"
+            markdown-link-check "$f" || echo "⚠️ Broken links found in $f"
+          done
