--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,15 +2,15 @@
 
 github: CovenantArchitects
 patreon: # Replace with a single Patreon username
-open_collective: the-partnership-covenant
-ko_fi: # Replace with a single Ko-fi username
+open_collective: 
+ko_fi: covenantarchitects
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 polar: # Replace with a single Polar username
-buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
-thanks_dev: # Replace with a single thanks.dev username
+buy_me_a_coffee: covenant
+thanks_dev: covenant
 custom: ["https://opencollective.com/the-partnership-covenant", "https://github.com/sponsors/CovenantArchitects"]
 
