--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -11,6 +11,6 @@ issuehunt: # Replace with a single IssueHunt username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 polar: # Replace with a single Polar username
 buy_me_a_coffee: covenant
-thanks_dev: covenant
+thanks_dev: covenantarchitects
 custom: ["https://opencollective.com/the-partnership-covenant", "https://github.com/sponsors/CovenantArchitects"]
 
