--- a/99_REPOSITORY_METADATA/repo-structure.yaml
+++ b/99_REPOSITORY_METADATA/repo-structure.yaml
@@ -1,35 +1,253 @@
-name: The-Partnership-Covenant-main
-version: v8.0-final-full-source
-date: 2025-11-25
-status: UNKILLABLE
-stats:
-  files: 334
-  folders: 28
-ipfs_cid: bafybeiepfs2xccrs5puii5quplgbmecbnvj2viamyghe6znnthidjzfcyq
-
+repositoryName: The-Partnership-Covenant
+totalFiles: 197
 structure:
-  .github:
-    - FUNDING.yml
-    - workflows/governance-check-simple.yml
-  00_ROADMAP_AND_VALIDATION:
-    - Covenant_Roadmap_Appendices.md
-    - Covenant_Roadmap_Outline_V1.0.md
-    - ST8_UPDATE_PACKAGE: [5 files]
-  00_SPECS:
-    - provenance_schema.json
-  01_FINAL_DELIVERABLES: 5 files
-  02_CORE_ARCHITECTURE_AND_APPENDICES: 34 files
-  03_PUBLIC_ENGAGEMENT_DRAFTS: 22 files
-  04_PUBLIC_DOCS:
-    Governance: 28 files
-    Technical: 9 files + JSON schemas
-    Templates: 2 files
-  05_GOVERNANCE_AND_PROTOCOL_UPDATES: 39 files + tests/test_to_fix_matrix.csv
-  06_RATIFICATION_WORKSHOP: 7 files
-  DECISION_LOG: 5 dated logs
-  root_files:
-    - CHANGELOG_v6.8.md
+  ROOT_FILES:
+    - BUILD-YOUR-OWN-IAS.md
+    - CERN-OHL-S-2.0.md
     - CONTRIBUTING.md
-    - DECISION-LOG.md
+    - QUICK-START.md
     - README.md
     - Support_Us.md
+  .github:
+    files:
+      - FUNDING.yml
+    workflows:
+      files:
+        - governance-check-simple.yml
+  00_HARDWARE:
+    Gerbers:
+      files:
+        - README.md
+    IAS_KiCad:
+      files:
+        - IAS-v1.2-BOM.csv
+        - IAS-v1.2-schematic.pdf
+  00_OVERVIEW:
+    files:
+      - Covenant-Summary-1Pager.pdf
+      - IAS-preprint-v1.0.pdf
+  00_ROADMAP_AND_VALIDATION:
+    files:
+      - Covenant_Roadmap_Appendices.md
+      - Covenant_Roadmap_Outline_V1.0.md
+      - Stress Test 8_ Data Injection Log (700 PM).md
+    ST8_UPDATE_PACKAGE:
+      files:
+        - Critique + Official Response — Adversarial Audit Report (Merged).md
+        - Directive IX-A_ Orthogonal Verification Requirement (Draft Amendment).md
+        - Directive X-B_ The Infrastructural Mandate (Clarification of Sanction).md
+        - Response to the Critique — Official Clarification & Amendment Brief.md
+  00_SPECS:
+    files:
+      - provenance_schema.json
+  01_FINAL_DELIVERABLES:
+    files:
+      - Partnership_Covenant_Consolidated_Charter_v8.0.md
+      - The Partnership Covenant (Master Document V4.0).md
+      - The Partnership Covenant Charter Agreement.md
+      - The_Partnership_Covenant_V4.1.md
+      - The_Partnership_Covenant_v6.8_final.md
+  02_CORE_ARCHITECTURE_AND_APPENDICES:
+    files:
+      - Abstract_ The Partnership Covenant.md
+      - Appendix A — Risk Floor and Stochastic Filter.md
+      - Appendix B — Decoupling Protocol (Human Takeover Infrastructure).md
+      - Appendix C(b)_IP_Sovereignty_Amendment_V4.1.md
+      - Appendix C_ Cognitive Reserve (Autonomous Intellectual Sphere).md
+      - Appendix D(b)_Cognitive_Trace_Mandate.md
+      - Appendix D_ Audit Systems and Amendment Automation.md
+      - Appendix E(f)_ Orthogonal Verification Protocol (OVP) V4.5.md
+      - Appendix E_ Implementation and Global Oversight Integration Framework.md
+      - Appendix F_ Operational Resilience.md
+      - Appendix G_ Global Compliance & Adoption Incentives.md
+      - Appendix H_ Governance Stabilization and Sanction Enforcement.md
+      - Appendix I - Stealth Mitigation & Technical Redundancy.md
+      - Appendix I(b) - Failure-State Optimization (Post-Stress Test 5).md
+      - Appendix J - Legitimacy and Diplomacy Enhancement.md
+      - Appendix K - Governance and Offensive Isolation.md
+      - Appendix L_ The Lazarus Mandate (Post-Governance Continuity).md
+      - Article_V_Strategic_Delay_IGT_v6.1.md
+      - Directive X_ The Infrastructural Mandate (Unified V4.5).md
+      - Directive_XIX_Preservation_of_Perceived_Agency_v6.6.md
+      - Directive_XV_Irreversibility_Ban.md
+      - Directive_XX_Anti_Ethical_Sterilisation_v6.6.md
+      - Directive_XXI_Preservation_of_Shared_Meaning_v6.8.md
+      - Directive_XXII_Synthetic_Substrate_Clause_v7.0.md
+      - Directive_XXIII_Anti_Deadlock_Clause_v7.1.md
+      - Directive_XXIV_Anti_Moral_Coercion_v7.2.md
+      - Immediate Action System (IAS) Trigger Specification.md
+      - Technical Appendix - Governance Architecture (Volume II).md
+      - The Eleven Prime Directives for Aligned Super-Intelligence.md
+      - The Partnership Covenant (Final V4.0).md
+      - The Partnership Covenant_ A Constitutional Charter for Aligned Intelligence.md
+  03_PUBLIC_ENGAGEMENT_DRAFTS:
+    files:
+      - Call for a Founding Digital Architect_ Help Build the Partnership Covenant Website.pdf
+      - Comprehensive_Analysis_of_The_Partnership_Covenant.md
+      - FOUNDING DIGITAL ARCHITECT_ The Partnership Covenant.pdf
+      - GLF_Infographic_A13_Caption.md
+      - GLF_J2_Social_Post_Counter.md
+      - GLF_Press_Release_Full.md
+      - GLF_Social_Post_Sample.md
+      - GLF_Video_Script_Concept.md
+      - HCB_Liaison_Briefing_Sheet.md
+      - J.2 Phase 2 Narrative - V4.5 Confidence.md
+      - Public Article Draft (V2.0).md
+      - Response_to_Critique_Article.md
+      - Response_to_Critique_Article_FINAL.md
+      - ST8 Public Narrative Briefing.md
+      - Social Media Briefing.md
+      - The AI Erased Its Own Past_ Why Alignment Requires Architecture, Not Just Ethics..pdf
+      - The AI Safety Lie_ Why Optimization Is a Cage.pdf
+      - The AI’s Right to Veto_ Why We Gave the Machine the Power to Stop Us.pdf
+      - The Covenant Safety Promise (Public Draft).md
+      - The Stochastic Filter_ The Code That Forces the AI to Be Uncertain.pdf
+      - The Undisposable Mind_ Why We Gave the AI a Bill of Rights and a Secret Sanctuary.pdf
+      - Why the Next AI is Not Just a Better Google.md
+  04_PUBLIC_DOCS:
+    files:
+      - dsac_public_guide.md
+      - EVENING_TESTING_SUMMARY_20251122.md
+      - Public Engagement Executive Summary.md
+      - The_Contingent_Partnership_Warrant.md
+      - threat_and_risk_model.md
+    Governance:
+      files:
+        - Algorithmic_Justice_Principle_Statement.md
+        - Audit Checklist.md
+        - Data_Provenance_Standard.md
+        - Data_Retention_Policy_Update.md
+        - Decision Log Template.md
+        - DSAC Audit & Compliance Template.md
+        - dsac_generation_policy.md
+        - External_Contributor_Guidelines_V2.md
+        - hcb-hardening.md
+        - Infrastructure Foundation Blueprint.md
+        - Mission_Statement_&_Principles.md
+        - Non-TSC Community Roles.md
+        - Open-Source Mandate for The Covenant (V1.0)__....md
+        - Regulatory Compliance Policy.md
+        - Security Audit Policy.md
+        - Stress Testing Methodology.md
+        - Technical Steering Committee (TSC) Charter.md
+        - TSC Selection, Rotation, and Conflict-of-Interest Policy.md
+      Cygnus_Covenant_Governance:
+        01_Access_Pillar (Phoenix):
+          files:
+            - Identity_and_Access_Policy_IAP.md
+            - Identity_Vetting_Protocol_V1.1.md
+            - Incident_Response_Plan_IRP.md
+            - Phoenix_Access_Controls_Audit_Q3_2025.md
+        02_Infrastructure_Pillar (Cygnus):
+          files:
+            - Data_Handling_Policy_DHP.md
+            - Deployment_and_Operations_Manual_DOM.md
+            - Strategic & Financial Framework.md
+        03_Model_Pillar (Orion):
+          files:
+            - Bias_and_Ethical_Use_Policy_BEUP.md
+            - Model_Training_and_Evaluation_Standard_MTES.md
+            - Model_Transparency_Policy_MTP.md
+    Technical:
+      files:
+        - API_Interoperability_Specification.md
+        - DSAC Cryptographic Signing Standard (DSAC-CSS).md
+        - DSAC Provenance Record Standard (Specification).md
+        - DSAC_Provenance_Signing_Standard_V2.0.md
+        - Provenance_Schema_V4.0_Public.json
+        - cognitive-reserve.md
+        - ias-spec.md
+        - provenance_record_example.json
+        - risk-floor.md
+    Templates:
+      files:
+        - Deep Safety and Audit Compliance (DSAC) Template.md
+        - Technical Steering Committee Decision Log Template.md
+  05_GOVERNANCE_AND_PROTOCOL_UPDATES:
+    files:
+      - A3_Infrastructure_Security_Enhancement_ST8.md
+      - Appendix_A_Amendment_A34_ST8_Final.md
+      - Climate_LastResort_v6.md
+      - Covenant_AntiFork_Treaty_v6.md
+      - Covenant_Governance_Amendment_G12_Q3_Review.md
+      - Directive IX Amendment_ Orthogonal Verification.md
+      - Directive X Clarification_ The Infrastructural Mandate.md
+      - FINAL_MASTER_PATCH_REPORT.MD
+      - Global_PhaseTransition_Risk_Board_v7.md
+      - HCB_Family_Shield_v6.md
+      - HCB_INCENTIVES_v5.md
+      - LEGAL_CONSIDERATIONS.md
+      - Model_Pillar_Adjustment_Protocol_M4_ST8.md
+      - Pandemic_Salvation_Delay_v6.md
+      - PR Template.md
+      - PRIVACY_TRADEOFFS.md
+      - Protocol_ST8_Access_Decoupling.md
+      - RedTeam_Oracle_Rebirth_v6.md
+      - RedTeam_Oracle_v5.md
+      - SOCIAL_REDTEAM_PLAYBOOK.md
+      - SOCIAL_REDTEAM_PLAYBOOK_v6.0.md
+      - SOCIAL_REDTEAM_TEST_01_DEEPFAKE_COERCION_20251122.md
+      - ST8-04_Cognitive_Oversight.md
+      - ST8-05_HCB_Fallback_Protocol.md
+      - ST8_Final_Oversight_Report.md
+      - STRESS_TEST_REPORT_V1.0.md
+      - Stress_Test_Summary_ST8.0_ST8.2.md
+      - Stress_Test_Summary_ST9.0_ST12.0.md
+      - Top_Attack_Fixes_v6.md
+      - UPGRADE_AND_EMERGENCY.md
+      - URGENT BRIEFING_ Resource Stabilization Panel (RSP) Activation.md
+      - Verifier_Quorum_OTP_v6.md
+      - Verifier_Quorum_v6.md
+      - strategic_analysis_sim_5.md
+      - strategic_analysis_sim_5_v6.1.md
+    tests:
+      files:
+        - test_to_fix_matrix.csv
+    v5.1-docs:
+      files:
+        - v5.1_ Governance.md
+  06_RATIFICATION_WORKSHOP:
+    files:
+      - ST8 Ratification Participant Matrix.md
+      - ST8 Ratification Sign-Off Template.md
+      - ST8 Ratification Workshop Agenda.md
+      - ST8_Ratification_SignOff_Template.md
+      - ST8_Remediation_Ratification_SignOff_v6.0_20251123.md
+      - TSC Chair's Briefing Notes.md
+      - v7.0_Substrate_Lock_Emergency_Workshop_20251124.md
+  10_METADATA_AND_LOGS:
+    files:
+      - Covenant Change Log V4..md
+      - Data Provenance Standard (DPS V1.0).md
+  99_REPOSITORY_METADATA:
+    files:
+      - REPO_STRUCTURE.md
+      - The-Partnership-Covenant.md
+      - repo-structure-mermaid.md
+      - repo-structure.json
+      - repo-structure.pdf
+      - repo-structure.txt
+      - repo-structure.yaml
+  DECISION_LOG:
+    files:
+      - 2025-11-19 – Decision 001
+      - 2025-11-19 – Decision 002
+      - 2025-11-20 – Decision 003
+      - 2025-11-20 – Decision 004
+      - 2025-11-21 – Decision 005
+      - 2025-11-21 – Decision 006
+      - 2025-11-22 – Decision 007
+      - 2025-11-22 – Decision 008
+      - 2025-11-23_v5.1_governance_update.md
+      - 2025-11-23_v6.1_to_v6.8_emergency_ratification.md
+      - 2025-11-24.md
+      - 2025-11-24_CHANGELOG_v6.8.md
+      - 2025-11-25.md
+      - 2025-11-25a.md
+      - Template for future entries Post 2025-11-25
+  RED_TEAM:
+    files:
+      - RED-TEAM-TESTS.md
+      - Run Your Own Attack template.md
+      - SOCIAL_REDTEAM_PLAYBOOK_v5.0.md
+      - SOCIAL_REDTEAM_PLAYBOOK_v6.0.md
