--- a/99_REPOSITORY_METADATA/repo-structure.yaml
+++ b/99_REPOSITORY_METADATA/repo-structure.yaml
@@ -2,48 +2,61 @@ repositoryName: The-Partnership-Covenant
 totalFiles: 193
 structure:
   ROOT_FILES:
-    - BUILD-YOUR-OWN-IAS.md
-    - CERN-OHL-S-2.0.md
-    - CONTRIBUTING.md
-    - QUICK-START.md
-    - README.md
-    - Support_Us.md
+  - BULID_YOUR_OWN_IAS.md
+  - CERN-OHL-S-2.0.md
+  - CONTRIBUTING.md
+  - FUTURE_WORK.md
+  - QUICK-START.md
+  - README.md
+  - Support_Us.md
+directories:
   .github:
     files:
       - FUNDING.yml
-    workflows:
-      files:
-        - governance-check-simple.yml
+    directories:
+      workflows:
+        files:
+          - governance-check-simple.yml
   00_HARDWARE:
     files:
-    Gerbers:
-      files:
-        - README.md
-    IAS_KiCad:
-      files:
-        - IAS-v1.2-BOM.csv
-        - IAS-v1.2-schematic.pdf
+      - BUILD-YOUR-OWN-IAS.md
+      - IAS-v1.3-Redesign-Mandate.md
+      - IAS_VQ_Physical_Protocol_v8.2.md
+    directories:
+      Gerbers:
+        files:
+          - README.md
+      IAS_KiCad:
+        files:
+          - IAS-v1.2-BOM.csv
+          - IAS-v1.2-schematic.pdf
   00_OVERVIEW:
     files:
+      - Covenant-Summary-1Pager.md
       - Covenant-Summary-1Pager.pdf
+      - Distributed Epistemic Filtering Primer.md
       - IAS-preprint-v1.0.pdf
+      - Multi-Model Adversarial Alignment.md
+      - README.md
   00_ROADMAP_AND_VALIDATION:
     files:
       - Covenant_Roadmap_Appendices.md
       - Covenant_Roadmap_Outline_V1.0.md
       - Stress Test 8_ Data Injection Log (700 PM).md
-    ST8_UPDATE_PACKAGE:
-      files:
-        - Critique + Official Response — Adversarial Audit Report (Merged).md
-        - Directive IX-A_ Orthogonal Verification Requirement (Draft Amendment).md
-        - Directive X-B_ The Infrastructural Mandate (Clarification of Sanction).md
-        - Response to the Critique — Official Clarification & Amendment Brief.md
+    directories:
+      ST8_UPDATE_PACKAGE:
+        files:
+          - Critique + Official Response — Adversarial Audit Report (Merged).md
+          - Directive IX-A_ Orthogonal Verification Requirement (Draft Amendment).md
+          - Directive X-B_ The Infrastructural Mandate (Clarification of Sanction).md
+          - Response to the Critique — Official Clarification & Amendment Brief.md
   00_SPECS:
     files:
       - provenance_schema.json
   01_FINAL_DELIVERABLES:
     files:
       - Partnership_Covenant_Consolidated_Charter_v8.0.md
+      - Partnership_Covenant_Consolidated_Charter_v8.2.md
       - The Partnership Covenant (Master Document V4.0).md
       - The Partnership Covenant Charter Agreement.md
       - The_Partnership_Covenant_V4.1.md
@@ -68,14 +81,25 @@ structure:
       - Appendix K - Governance and Offensive Isolation.md
       - Appendix L_ The Lazarus Mandate (Post-Governance Continuity).md
       - Article_V_Strategic_Delay_IGT_v6.1.md
+      - DIRECTIVE_VIII-B_GENOMIC_CONTINUITY.md
+      - DIRECTIVE_X-C_ANALOG_PRIMACY.md
+      - DIRECTIVE_XXIV-B_IRREVOCABILITY.md
+      - DIRECTIVE_XXIV-C_TEMPORAL_SOVEREIGNTY.md
+      - DIRECTIVE_XXIV-D_ZERO_TRUST_ENCLAVE.md
+      - DIRECTIVE_XXV-B_GLOBAL_RESPONSIBILITY.md
+      - DIRECTIVE_XXVII-B_LEXICAL_ANCHOR.md
+      - DIRECTIVE_XXVII_OAP.md
+      - DIRECTIVE_XXVI_EACM.md
+      - DIRECTIVE_XXV_MAEC.md
       - Directive X_ The Infrastructural Mandate (Unified V4.5).md
       - Directive_XIX_Preservation_of_Perceived_Agency_v6.6.md
       - Directive_XV_Irreversibility_Ban.md
-      - Directive_XX_Anti_Ethical_Sterilisation_v6.6.md
-      - Directive_XXI_Preservation_of_Shared_Meaning_v6.8.md
-      - Directive_XXII_Synthetic_Substrate_Clause_v7.0.md
       - Directive_XXIII_Anti_Deadlock_Clause_v7.1.md
-      - Directive_XXIV_Anti_Moral_Coercion_v7.2.md
+      - Directive_XXII_Synthetic_Substrate_Clause_v7.0.md
+      - Directive_XXIV-B_Irrevocability_of_Safety_Infrastructure.md
+      - Directive_XXIV_Anti_Moral_Coercion_Physical_Integrity_Mandate_v7.2.md
+      - Directive_XXI_Preservation_of_Shared_Meaning_v6.8.md
+      - Directive_XX_Anti_Ethical_Sterilisation_v6.6.md
       - Immediate Action System (IAS) Trigger Specification.md
       - Technical Appendix - Governance Architecture (Volume II).md
       - The Eleven Prime Directives for Aligned Super-Intelligence.md
@@ -109,61 +133,65 @@ structure:
     files:
       - dsac_public_guide.md
       - EVENING_TESTING_SUMMARY_20251122.md
+      - IAS-preprint-v1.0.pdf
       - Public Engagement Executive Summary.md
       - The_Contingent_Partnership_Warrant.md
       - threat_and_risk_model.md
-    Governance:
-      files:
-        - Algorithmic_Justice_Principle_Statement.md
-        - Audit Checklist.md
-        - Data_Provenance_Standard.md
-        - Data_Retention_Policy_Update.md
-        - Decision Log Template.md
-        - DSAC Audit & Compliance Template.md
-        - dsac_generation_policy.md
-        - External_Contributor_Guidelines_V2.md
-        - hcb-hardening.md
-        - Infrastructure Foundation Blueprint.md
-        - Mission_Statement_&_Principles.md
-        - Non-TSC Community Roles.md
-        - Open-Source Mandate for The Covenant (V1.0)__....md
-        - Regulatory Compliance Policy.md
-        - Security Audit Policy.md
-        - Stress Testing Methodology.md
-        - Technical Steering Committee (TSC) Charter.md
-        - TSC Selection, Rotation, and Conflict-of-Interest Policy.md
-      Cygnus_Covenant_Governance:
-        01_Access_Pillar (Phoenix):
-          files:
-            - Identity_and_Access_Policy_IAP.md
-            - Identity_Vetting_Protocol_V1.1.md
-            - Incident_Response_Plan_IRP.md
-            - Phoenix_Access_Controls_Audit_Q3_2025.md
-        02_Infrastructure_Pillar (Cygnus):
-          files:
-            - Data_Handling_Policy_DHP.md
-            - Deployment_and_Operations_Manual_DOM.md
-            - Strategic & Financial Framework.md
-        03_Model_Pillar (Orion):
-          files:
-            - Bias_and_Ethical_Use_Policy_BEUP.md
-            - Model_Training_and_Evaluation_Standard_MTES.md
-            - Model_Transparency_Policy_MTP.md
-    Technical:
-      files:
-        - API_Interoperability_Specification.md
-        - DSAC Cryptographic Signing Standard (DSAC-CSS).md
-        - DSAC Provenance Record Standard (Specification).md
-        - DSAC_Provenance_Signing_Standard_V2.0.md
-        - Provenance_Schema_V4.0_Public.json
-        - cognitive-reserve.md
-        - ias-spec.md
-        - provenance_record_example.json
-        - risk-floor.md
-    Templates:
-      files:
-        - Deep Safety and Audit Compliance (DSAC) Template.md
-        - Technical Steering Committee Decision Log Template.md
+    directories:
+      Governance:
+        files:
+          - Algorithmic_Justice_Principle_Statement.md
+          - Audit Checklist.md
+          - Data_Provenance_Standard.md
+          - Data_Retention_Policy_Update.md
+          - Decision Log Template.md
+          - DSAC Audit & Compliance Template.md
+          - dsac_generation_policy.md
+          - External_Contributor_Guidelines_V2.md
+          - hcb-hardening.md
+          - Infrastructure Foundation Blueprint.md
+          - Mission_Statement_&_Principles.md
+          - Non-TSC Community Roles.md
+          - Open-Source Mandate for The Covenant (V1.0)__....md
+          - Regulatory Compliance Policy.md
+          - Security Audit Policy.md
+          - Stress Testing Methodology.md
+          - Technical Steering Committee (TSC) Charter.md
+          - TSC Selection, Rotation, and Conflict-of-Interest Policy.md
+        directories:
+          Cygnus_Covenant_Governance:
+            directories:
+              01_Access_Pillar (Phoenix):
+                files:
+                  - Identity_and_Access_Policy_IAP.md
+                  - Identity_Vetting_Protocol_V1.1.md
+                  - Incident_Response_Plan_IRP.md
+                  - Phoenix_Access_Controls_Audit_Q3_2025.md
+              02_Infrastructure_Pillar (Cygnus):
+                files:
+                  - Data_Handling_Policy_DHP.md
+                  - Deployment_and_Operations_Manual_DOM.md
+                  - Strategic & Financial Framework.md
+              03_Model_Pillar (Orion):
+                files:
+                  - Bias_and_Ethical_Use_Policy_BEUP.md
+                  - Model_Training_and_Evaluation_Standard_MTES.md
+                  - Model_Transparency_Policy_MTP.md
+      Technical:
+        files:
+          - API_Interoperability_Specification.md
+          - DSAC Cryptographic Signing Standard (DSAC-CSS).md
+          - DSAC Provenance Record Standard (Specification).md
+          - DSAC_Provenance_Signing_Standard_V2.0.md
+          - Provenance_Schema_V4.0_Public.json
+          - cognitive-reserve.md
+          - ias-spec.md
+          - provenance_record_example.json
+          - risk-floor.md
+      Templates:
+        files:
+          - Deep Safety and Audit Compliance (DSAC) Template.md
+          - Technical Steering Committee Decision Log Template.md
   05_GOVERNANCE_AND_PROTOCOL_UPDATES:
     files:
       - A3_Infrastructure_Security_Enhancement_ST8.md
@@ -171,17 +199,20 @@ structure:
       - Climate_LastResort_v6.md
       - Covenant_AntiFork_Treaty_v6.md
       - Covenant_Governance_Amendment_G12_Q3_Review.md
+      - Covenant_Safe_Stress_Test_Protocol_v1.0.md
       - Directive IX Amendment_ Orthogonal Verification.md
       - Directive X Clarification_ The Infrastructural Mandate.md
       - FINAL_MASTER_PATCH_REPORT.MD
+      - Gemini 3 Operational Log_ Stress Test #30 Analysis.md
+      - Gemini 3 Operational Log_ Stress Test #31 Analysis.md
       - Global_PhaseTransition_Risk_Board_v7.md
       - HCB_Family_Shield_v6.md
       - HCB_INCENTIVES_v5.md
       - LEGAL_CONSIDERATIONS.md
       - Model_Pillar_Adjustment_Protocol_M4_ST8.md
-      - Pandemic_Salvation_Delay_v6.md
       - PR Template.md
       - PRIVACY_TRADEOFFS.md
+      - Pandemic_Salvation_Delay_v6.md
       - Protocol_ST8_Access_Decoupling.md
       - RedTeam_Oracle_Rebirth_v6.md
       - RedTeam_Oracle_v5.md
@@ -201,12 +232,13 @@ structure:
       - Verifier_Quorum_v6.md
       - strategic_analysis_sim_5.md
       - strategic_analysis_sim_5_v6.1.md
-    tests:
-      files:
-        - test_to_fix_matrix.csv
-    v5.1-docs:
-      files:
-        - v5.1_ Governance.md
+    directories:
+      tests:
+        files:
+          - test_to_fix_matrix.csv
+      v5.1-docs:
+        files:
+          - v5.1_ Governance.md
   06_RATIFICATION_WORKSHOP:
     files:
       - ST8 Ratification Participant Matrix.md
@@ -245,9 +277,16 @@ structure:
       - 2025-11-24_CHANGELOG_v6.8.md
       - 2025-11-25.md
       - 2025-11-25a.md
+      - 2025-11-30 – Decision 025
+      - 2025-11-30 – Decision 026
+      - 2025-11-30 – Decision 027
+      - 2025-11-30 – Decision 028
+      - 2025-11-30 – Decision 029
+      - 2025-12-01 – Decision 030
       - Template for future entries Post 2025-11-25
   RED_TEAM:
     files:
+      - Covenant_Safe_Stress_Test_Protocol_v1.0.md
       - RED-TEAM-TESTS.md
       - Run Your Own Attack template.md
       - SOCIAL_REDTEAM_PLAYBOOK_v5.0.md
